# RoombaBrain

./: .gitignore  CMakeLists.txt  Makefile  generate_support.sh  platformio.ini
client-test/: Gemfile  client.rb
components/flatcc/: component.mk
components/flatcc/src/runtime/: builder.c
main/: Kconfig.projbuild  component.mk  endpoint.c  main.c  roomba.c  roomba.h  rpc.c  wifi.c  wifi.h
main/include/: roomba.h  rpc.h  utils.h
rpc/: request.proto  response.proto  roomba.proto  rpc_request.fbs  rpc_response.fbs
src/: endpoint.c  endpoint.h  main.c  roomba.c  roomba.h
